@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>sci-mathematics</herd>
-	<use>
-		<flag name="opencascade"> Enable OpenCASCADE support</flag>
-	</use>
+  <herd>sci-mathematics</herd>
+  <use>
+    <flag name="opencascade"> Enable OpenCASCADE support</flag>
+  </use>
+  <upstream>
+    <remote-id type="sourceforge">netgen-mesher</remote-id>
+  </upstream>
 </pkgmetadata>
