@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
+  sci-mathematics/netgen: Updating remote-id in metadata.xml
+
   26 Apr 2015; Marius Brehler <marbre@linux.sungazer.de> netgen-5.0.0.ebuild:
   Bump to EAPI=5; Update Manifest (Bug #407)
 
